# ci-python-lab

./: .coverage  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ci_python_lab/: calculator.py
tests/: test_calculator.py
