[project]
name = "ci-python-lab"
version = "0.1.0"
description = "Python CI lab"
authors = [
    {name = "qewckey"}
]
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.13,<0.16.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]

[tool.poetry]
packages = [{ include = "ci_python_lab", from = "src" }]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ci_python_lab --cov-report=term-missing"
